# fbtft_benchmark_for_luckfox_pico

./: .gitignore  CMakeLists.txt  README.md  build.sh  luckfox_pico_rv1103.patch  test.sh
lib/Config/: DEV_Config.c  DEV_Config.h  dev_hardware_SPI.c  dev_hardware_SPI.h  sysfs_gpio.c  sysfs_gpio.h
lib/Fonts/: font24CN.c
lib/GUI/: GUI_BMP.c  GUI_BMP.h  GUI_Paint.c  GUI_Paint.h
lib/LCD/: Pico_LCD_2in.c  Pico_LCD_2in.h
src/: main.c
